--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="signed_out">Signed Out</string>
 
     <string name="app_name">ShopMob</string>
-    <string name="app_name_planning">ShopMob Lists</string>
+    <string name="app_name_planning">ShopMob %1$s</string>
     <string name="app_name_admin">ShopMob Administration</string>
     <string name="app_name_details_product">ShopMob Product Details</string>
     <string name="app_name_details_shop">ShopMob Shop Details</string>
@@ -51,5 +51,8 @@
     <string name="map_user_prompt">Select a point of interest to create a ShopMob location.</string>
     <string name="error_add_smob_items">Add some ShopMob items first…</string>
     <string name="location_accuracy_explanation"><![CDATA[ShopMob needs \'Improve Location Accuracy\' enabled. Go to settings \'Security & Location > Location > Mode\' to enable this.]]></string>
+    <string name="static_shortcut_label_short">Active Shopping List</string>
+    <string name="static_shortcut_label_long">This link takes you to the last active ShopMob shopping list.</string>
+    <string name="static_shortcut_disabled_message">No active ShopMob shopping list found</string>
 
 </resources>
