--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
     <string name="signed_out">Signed Out</string>
 
     <string name="app_name">ShopMob</string>
-    <string name="app_name_planning">ShopMob %1$s</string>
+    <string name="app_name_planning">Shop for: %1$s</string>
+    <string name="app_name_planning_shop">ShopMob: %1$s</string>
     <string name="app_name_admin">ShopMob Administration</string>
     <string name="app_name_details_product">ShopMob Product Details</string>
     <string name="app_name_details_shop">ShopMob Shop Details</string>
