--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -40,19 +40,25 @@
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="smob_product_details">ShopMob Product Details</string>
-    <string name="smob_shop_details">ShopMob Shop Details</string>
+    <string name="smob_shop_details">ShopMob Store Details</string>
     <string name="map">map</string>
 
     <string name="anchor_char">x</string>
-    <string name="title">Title:</string>
+    <string name="title_product">Product</string>
+    <string name="title_shop">Store</string>
     <string name="dismiss">Dismiss</string>
     <string name="floor_plan">Floor Plan</string>
     <string name="description">Description</string>
     <string name="location">Location</string>
+    <string name="location_latlong">%1$.4f / %2$.4f</string>
     <string name="catMain">Category</string>
     <string name="catSub">Kind</string>
     <string name="actDate">Purchased</string>
     <string name="actReps">Repetitions</string>
+    <string name="storeType">Type</string>
+    <string name="storeCategory">Category</string>
+    <string name="storeCatConv">%1$d</string>
+    <string name="storeBusiness">Hours</string>
     <string name="map_user_prompt">Select a point of interest to create a ShopMob location.</string>
     <string name="error_add_smob_items">Add some ShopMob items first…</string>
     <string name="location_accuracy_explanation"><![CDATA[ShopMob needs \'Improve Location Accuracy\' enabled. Go to settings \'Security & Location > Location > Mode\' to enable this.]]></string>
