--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -8,6 +8,11 @@
     <string name="app_name_admin">ShopMob Administration</string>
     <string name="app_name_details_product">ShopMob Product Details</string>
     <string name="app_name_details_shop">ShopMob Shop Details</string>
+    <string name="app_name_shopping_zones">ShopMob Shop Floorplan</string>
+    <string name="shopping_zones">Shop Zones</string>
+    <string name="shopping_sections">Shop Sections</string>
+    <string name="icon_shopping_cart">Shopping Cart</string>
+    <string name="shopping">Shopping at the supermarket</string>
     <string name="no_data">No Data</string>
     <string name="smob_item_title">ShopMob Item Title</string>
     <string name="smob_item_desc">ShopMob Item Description</string>
