--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -15,10 +15,16 @@
     <string name="icon_shopping_cart">Shopping Cart</string>
     <string name="shopping">Shopping at the supermarket</string>
     <string name="no_data">No Data</string>
+
     <string name="smob_item_title">ShopMob Item Title</string>
     <string name="smob_item_desc">ShopMob Item Description</string>
     <string name="smob_item_location">ShopMob Item Location</string>
     <string name="smob_item_saved">ShopMob Item Saved!</string>
+
+    <string name="smob_shop_title">ShopMob Shop Name</string>
+    <string name="smob_shop_desc">ShopMob Shop Description</string>
+    <string name="smob_shop_location">ShopMob Shop Location</string>
+    <string name="smob_shop_saved">ShopMob Shop Saved!</string>
 
     <string name="smob_list_name">ShopMob Shopping List Name</string>
     <string name="smob_list_desc">ShopMob Shopping List Description</string>
