--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="smob_shop_name">ShopMob Shop Name</string>
     <string name="smob_shop_desc">ShopMob Shop Description</string>
     <string name="smob_shop_prompt">Select Shop</string>
+    <string name="smob_shop_locate">Locate Shop</string>
     <string name="smob_shop_saved">ShopMob Shop Saved!</string>
 
     <string name="smob_list_name">ShopMob Shopping List Name</string>
@@ -90,7 +91,7 @@
     <string name="storeCatConv">%1$d</string>
     <string name="storeBusiness">Hours</string>
     <string name="storeBusinessTable">Mon: %1$s // Tue: %2$s\nWed: %3$s // Thur: %4$s\nFri: %5$s // Sat: %6$s\nSun: %7$s</string>
-    <string name="map_user_prompt">Select a point of interest to create a ShopMob location.</string>
+    <string name="map_user_prompt">Select location of the ShopMob Store.</string>
     <string name="error_add_smob_items">Add some ShopMob items first…</string>
     <string name="location_accuracy_explanation"><![CDATA[ShopMob needs \'Improve Location Accuracy\' enabled. Go to settings \'Security & Location > Location > Mode\' to enable this.]]></string>
     <string name="static_shortcut_label_short">Active Shopping List</string>
