geoFence --> shop details screen + modal navigation options (launch instead of login)

--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
 
 
     <string name="logout">Logout</string>
+    <string name="launch">Launch</string>
     <string name="welcome_message">Welcome to\nShopMob</string>
     <string name="login">Login</string>
     <string name="normal_map">Normal Map</string>
