--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
     <string name="smob_item_subCat">ShopMob Item Sub Category (e.g. DAIRY)</string>
     <string name="smob_item_saved">ShopMob Item Saved!</string>
 
+    <string name="smob_lists_name">ShopMob Shopping Lists</string>
+
     <string name="smob_shop_name">ShopMob Shop Name</string>
     <string name="smob_shop_desc">ShopMob Shop Description</string>
     <string name="smob_shop_prompt">Select Shop</string>
@@ -58,12 +60,15 @@
     <string name="err_enter_catSub">Please enter product sub category (e.g. DAIRY)</string>
     <string name="err_select_shop">Please select shop category (e.g. SUPERMARKET)</string>
 
-    <!-- Error strings -->
+    <!-- Smob UI strings -->
     <string name="smob_icon">ShopMob icon</string>
     <string name="add_smob_item">Add ShopMob item</string>
     <string name="add_smob_shop">Add ShopMob shop</string>
     <string name="save_smob_item">Save ShopMob item</string>
     <string name="save_smob_shop">Save ShopMob shop</string>
+
+    <!-- Smob fcm channel ID -->
+    <string name="smob_update_notification_channel_id">smob_update_notification_channel_id</string>
 
     <!-- buttons -->
     <string name="ok">OK</string>
@@ -104,5 +109,7 @@
     <string name="close">close</string>
     <string name="coming_soon">… coming soon.</string>
     <string name="deepLinkMap">android-app://com.tanfra.shopmob.smob.ui.planning.shopEdit/map</string>
+    <string name="message_subscribed">Topic \'ShopMob Update\' created.</string>
+    <string name="message_subscribe_failed">Failed to create topic \'ShopMob Update\'</string>
 
 </resources>
