--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -67,6 +67,7 @@
     <!-- Smob UI strings -->
     <string name="smob_icon">ShopMob icon</string>
     <string name="add_smob_item">Add ShopMob item</string>
+    <string name="add_smob_group">Add ShopMob group</string>
     <string name="add_smob_shop">Add ShopMob shop</string>
     <string name="save_smob_item">Save ShopMob item</string>
     <string name="save_smob_shop">Save ShopMob shop</string>
