--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -38,6 +38,14 @@
     <string name="smob_list_saved">ShopMob Shop List Saved!</string>
     <string name="smob_list_completion">%1$.0f %%</string>
 
+    <string name="smob_group_name">ShopMob Group Name</string>
+    <string name="smob_group_desc">ShopMob Group Description</string>
+    <string name="smob_group_saved">ShopMob Group Saved!</string>
+    <string name="smob_group_type">ShopMob Group Type (e.g. FAMILY)</string>
+
+    <string name="smob_group_member_username">ShopMob Group Member Username</string>
+    <string name="smob_group_member_name">ShopMob Group Member Name</string>
+    <string name="smob_group_member_saved">ShopMob Group Member Added!</string>
 
     <string name="logout">Logout</string>
     <string name="launch">Launch</string>
@@ -57,6 +65,7 @@
     <string name="anonymous_place">A nice, anonymous place</string>
     <string name="settings">Settings</string>
     <string name="err_enter_title">Please enter title</string>
+    <string name="err_enter_group_name">Please enter group name</string>
     <string name="err_select_location">Please select location</string>
 
     <string name="err_enter_name">Please enter product name</string>
@@ -67,10 +76,12 @@
     <!-- Smob UI strings -->
     <string name="smob_icon">ShopMob icon</string>
     <string name="add_smob_item">Add ShopMob item</string>
-    <string name="add_smob_group">Add ShopMob group</string>
     <string name="add_smob_shop">Add ShopMob shop</string>
+    <string name="add_smob_group">Add ShopMob group</string>
+    <string name="add_smob_group_member">Add ShopMob group member</string>
     <string name="save_smob_item">Save ShopMob item</string>
     <string name="save_smob_shop">Save ShopMob shop</string>
+    <string name="save_smob_group">Save ShopMob group</string>
 
     <!-- Smob fcm channel ID -->
     <string name="smob_update_notification_channel_id">smob_update_notification_channel_id</string>
@@ -97,8 +108,10 @@
     <string name="description">Description</string>
     <string name="adminDescription">ShopMob administration</string>
     <string name="adminGroupDescription">ShopMob group administration</string>
+    <string name="adminGroupMemberDescription">ShopMob group member administration</string>
     <string name="adminListDescription">ShopMob shopping list administration</string>
     <string name="adminProfileDescription">ShopMob user profile administration</string>
+    <string name="adminUserAvatar">ShopMob user avatar</string>
     <string name="location">Location</string>
     <string name="location_latlong">%1$.6f,%2$.6f</string>
     <string name="catMain">Category</string>
@@ -112,6 +125,7 @@
     <string name="storeBusinessTable">Mon: %1$s // Tue: %2$s\nWed: %3$s // Thur: %4$s\nFri: %5$s // Sat: %6$s\nSun: %7$s</string>
     <string name="map_user_prompt">Select location of the ShopMob Store.</string>
     <string name="error_add_smob_items">Add some ShopMob items first…</string>
+    <string name="error_add_smob_users">Add some ShopMob users first…</string>
     <string name="error_add_smob_lists">Add some ShopMob lists first…</string>
     <string name="location_accuracy_explanation"><![CDATA[ShopMob needs \'Improve Location Accuracy\' enabled. Go to settings \'Security & Location > Location > Mode\' to enable this.]]></string>
     <string name="static_shortcut_label_short">Active Shopping List</string>
