--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -67,6 +67,7 @@
     <string name="settings">Settings</string>
     <string name="err_enter_title">Please enter title</string>
     <string name="err_enter_group_name">Please enter group name</string>
+    <string name="err_enter_list_name">Please enter list name</string>
     <string name="err_select_location">Please select location</string>
 
     <string name="err_enter_name">Please enter product name</string>
@@ -80,6 +81,7 @@
     <string name="add_smob_shop">Add ShopMob shop</string>
     <string name="add_smob_group">Add ShopMob group</string>
     <string name="add_smob_group_member">Add ShopMob group member</string>
+    <string name="add_smob_list_member">Add ShopMob list member</string>
     <string name="save_smob_item">Save ShopMob item</string>
     <string name="save_smob_shop">Save ShopMob shop</string>
     <string name="save_smob_group">Save ShopMob group</string>
@@ -116,6 +118,7 @@
     <string name="adminDescription">ShopMob administration</string>
     <string name="adminGroupDescription">ShopMob group administration</string>
     <string name="adminGroupMemberDescription">ShopMob group member administration</string>
+    <string name="adminListMemberDescription">ShopMob list member administration</string>
     <string name="adminListDescription">ShopMob shopping list administration</string>
     <string name="adminProfileDescription">ShopMob user profile administration</string>
     <string name="adminMemberDescription">ShopMob group member details</string>
