--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -84,6 +84,9 @@
     <string name="err_enter_catSub">Please enter product sub category (e.g. DAIRY)</string>
     <string name="err_select_shop">Please select shop category (e.g. SUPERMARKET)</string>
 
+    <string name="notification_permission_explanation">Without notification permissions, SmobShop consumes more battery power.</string>
+
+
     <!-- Smob UI strings -->
     <string name="smob_icon">ShopMob icon</string>
     <string name="add_smob_item">Add ShopMob item</string>
@@ -161,7 +164,9 @@
     <string name="close">close</string>
     <string name="coming_soon">… coming soon.</string>
     <string name="deepLinkMap">android-app://com.tanfra.shopmob.smob.ui.planning.shopEdit/map</string>
-    <string name="message_subscribed">Topic \'ShopMob Update\' created.</string>
-    <string name="message_subscribe_failed">Failed to create topic \'ShopMob Update\'</string>
+    <string name="message_subscribed">Successfully subscribed to topic \'ShopMob Update\'.</string>
+    <string name="message_subscribe_failed">Failed to subscribe to topic \'ShopMob Update\'</string>
+    <string name="notification_permissions_granted">Notifications permission granted</string>
+    <string name="notification_permissions_denied">FCM can\'t post notifications without POST_NOTIFICATIONS permission</string>
 
 </resources>
