Introduction of Compose Navigation - refactoring, Scaffold as nav container

--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -64,7 +64,13 @@
     <string name="access_contacts_permission_denied_consequence">Access to contacts would help you in defining ShopMob groups.</string>
     <string name="location_access_explanation">ShopMob needs location to be enabled (geoFences). Activate in settings.</string>
     <string name="anonymous_place">A nice, anonymous place</string>
+
     <string name="settings">Settings</string>
+    <string name="home">Home</string>
+    <string name="screen1">Screen-1</string>
+    <string name="screen2">Screen-2</string>
+    <string name="screen3">Screen-3</string>
+
     <string name="err_enter_title">Please enter title</string>
     <string name="err_enter_group_name">Please enter group name</string>
     <string name="err_enter_list_name">Please enter list name</string>
