clean-up of navigation - all nav related actions now in NavGraph - still using Scaffold local state for Scaffold control

--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -99,6 +99,7 @@
     <string name="add_smob_list_desc">Add ShopMob list description</string>
     <string name="add_smob_shop">Add ShopMob shop</string>
     <string name="add_smob_group">Add ShopMob group</string>
+    <string name="add_smob_item">Add ShopMob item</string>
     <string name="add_smob_group_member">Add ShopMob group member</string>
     <string name="add_smob_group_member_prompt">You are in the following groups…</string>
     <string name="add_smob_group_select">Select SmobList group</string>
